feat: added login page and created basic theme system

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,2 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
 @import "tailwindcss";
 @plugin "tailwindcss-react-aria-components";
+@import "./theme.css";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+html,
+body,
+#root,
+#root > div {
+  height: 100%;
+}
