feat: added ThemeProvider & theme toggle, global Figtree font, and new features folders for roles

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -7,7 +7,13 @@
 
 html,
 body,
-#root,
-#root > div {
+#root {
   height: 100%;
+  font-family: "Figtree", sans-serif;
+  background-color: var(--color-background);
+}
+
+/* https://stackoverflow.com/questions/68400074/how-to-apply-transition-effects-when-switching-from-light-mode-to-dark-in-tailwi */
+body * {
+  @apply transition-colors duration-500;
 }
