fix: fixed theme transition being applied incorrectly

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -18,6 +18,6 @@ body,
 }
 
 /* https://stackoverflow.com/questions/68400074/how-to-apply-transition-effects-when-switching-from-light-mode-to-dark-in-tailwi */
-body * {
+body.enable-theme-transition * {
   @apply transition-colors duration-500;
 }
