--- a/apps/web/src/theme.css
+++ b/apps/web/src/theme.css
@@ -52,54 +52,38 @@
   /* EVENT CARD BUTTONS */
   --event-button-bg-not-applied: var(--color-cyan-700);
   --event-button-bg-not-applied-hover: var(--color-cyan-800);
-  --event-button-bg-under-review: color-mix(
-    in oklab,
-    var(--color-cyan-700) 25%,
-    transparent
-  );
-  --event-button-bg-under-review-hover: color-mix(
-    in oklab,
-    var(--color-cyan-700) 15%,
-    transparent
-  );
+  --event-button-bg-under-review: color-mix(in oklab,
+      var(--color-cyan-700) 25%,
+      transparent);
+  --event-button-bg-under-review-hover: color-mix(in oklab,
+      var(--color-cyan-700) 15%,
+      transparent);
   --event-button-bg-accepted-attending: var(--color-green-600);
   --event-button-bg-accepted-attending-hover: var(--color-green-700);
   --event-button-bg-accepted-not-going: var(--color-neutral-200);
   --event-button-bg-accepted-not-going-hover: var(--color-neutral-300);
   --event-button-bg-rejected: var(--color-neutral-200);
   --event-button-bg-rejected-hover: var(--color-neutral-300);
-  --event-button-bg-attending: color-mix(
-    in oklab,
-    var(--color-cyan-700) 25%,
-    transparent
-  );
-  --event-button-bg-attending-hover: color-mix(
-    in oklab,
-    var(--color-cyan-700) 30%,
-    transparent
-  );
+  --event-button-bg-attending: color-mix(in oklab,
+      var(--color-cyan-700) 25%,
+      transparent);
+  --event-button-bg-attending-hover: color-mix(in oklab,
+      var(--color-cyan-700) 30%,
+      transparent);
   --event-button-bg-waitlisted: var(--color-violet-200);
   --event-button-bg-waitlisted-hover: var(--color-violet-300);
-  --event-button-bg-staff: color-mix(
-    in oklab,
-    var(--color-cyan-700) 25%,
-    transparent
-  );
-  --event-button-bg-staff-hover: color-mix(
-    in oklab,
-    var(--color-cyan-700) 30%,
-    transparent
-  );
-  --event-button-bg-admin: color-mix(
-    in oklab,
-    var(--color-cyan-700) 25%,
-    transparent
-  );
-  --event-button-bg-admin-hover: color-mix(
-    in oklab,
-    var(--color-cyan-700) 30%,
-    transparent
-  );
+  --event-button-bg-staff: color-mix(in oklab,
+      var(--color-cyan-700) 25%,
+      transparent);
+  --event-button-bg-staff-hover: color-mix(in oklab,
+      var(--color-cyan-700) 30%,
+      transparent);
+  --event-button-bg-admin: color-mix(in oklab,
+      var(--color-cyan-700) 25%,
+      transparent);
+  --event-button-bg-admin-hover: color-mix(in oklab,
+      var(--color-cyan-700) 30%,
+      transparent);
   --event-button-bg-not-going: var(--color-neutral-200);
   --event-button-bg-not-going-hover: var(--color-neutral-300);
   --event-button-bg-completed: var(--color-neutral-200);
@@ -172,90 +156,58 @@
   /* EVENT CARD BUTTONS */
   --event-button-bg-not-applied: var(--color-cyan-800);
   --event-button-bg-not-applied-hover: var(--color-cyan-900);
-  --event-button-bg-under-review: color-mix(
-    in oklab,
-    var(--color-cyan-700) 25%,
-    transparent
-  );
-  --event-button-bg-under-review-hover: color-mix(
-    in oklab,
-    var(--color-cyan-700) 30%,
-    transparent
-  );
+  --event-button-bg-under-review: color-mix(in oklab,
+      var(--color-cyan-700) 25%,
+      transparent);
+  --event-button-bg-under-review-hover: color-mix(in oklab,
+      var(--color-cyan-700) 30%,
+      transparent);
   --event-button-bg-accepted-attending: var(--color-green-700);
   --event-button-bg-accepted-attending-hover: var(--color-green-800);
-  --event-button-bg-accepted-not-going: color-mix(
-    in oklab,
-    var(--color-neutral-200) 25%,
-    transparent
-  );
-  --event-button-bg-accepted-not-going-hover: color-mix(
-    in oklab,
-    var(--color-neutral-200) 30%,
-    transparent
-  );
-  --event-button-bg-rejected: color-mix(
-    in oklab,
-    var(--color-neutral-200) 25%,
-    transparent
-  );
-  --event-button-bg-rejected-hover: color-mix(
-    in oklab,
-    var(--color-neutral-200) 30%,
-    transparent
-  );
-  --event-button-bg-attending: color-mix(
-    in oklab,
-    var(--color-cyan-700) 25%,
-    transparent
-  );
-  --event-button-bg-attending-hover: color-mix(
-    in oklab,
-    var(--color-cyan-700) 30%,
-    transparent
-  );
+  --event-button-bg-accepted-not-going: color-mix(in oklab,
+      var(--color-neutral-200) 25%,
+      transparent);
+  --event-button-bg-accepted-not-going-hover: color-mix(in oklab,
+      var(--color-neutral-200) 30%,
+      transparent);
+  --event-button-bg-rejected: color-mix(in oklab,
+      var(--color-neutral-200) 25%,
+      transparent);
+  --event-button-bg-rejected-hover: color-mix(in oklab,
+      var(--color-neutral-200) 30%,
+      transparent);
+  --event-button-bg-attending: color-mix(in oklab,
+      var(--color-cyan-700) 25%,
+      transparent);
+  --event-button-bg-attending-hover: color-mix(in oklab,
+      var(--color-cyan-700) 30%,
+      transparent);
   --event-button-bg-waitlisted: #453a6b;
   --event-button-bg-waitlisted-hover: #413569;
-  --event-button-bg-staff: color-mix(
-    in oklab,
-    var(--color-cyan-700) 25%,
-    transparent
-  );
-  --event-button-bg-staff-hover: color-mix(
-    in oklab,
-    var(--color-cyan-700) 30%,
-    transparent
-  );
-  --event-button-bg-admin: color-mix(
-    in oklab,
-    var(--color-cyan-700) 25%,
-    transparent
-  );
-  --event-button-bg-admin-hover: color-mix(
-    in oklab,
-    var(--color-cyan-700) 30%,
-    transparent
-  );
-  --event-button-bg-not-going: color-mix(
-    in oklab,
-    var(--color-neutral-200) 25%,
-    transparent
-  );
-  --event-button-bg-not-going-hover: color-mix(
-    in oklab,
-    var(--color-neutral-200) 30%,
-    transparent
-  );
-  --event-button-bg-completed: color-mix(
-    in oklab,
-    var(--color-neutral-200) 25%,
-    transparent
-  );
-  --event-button-bg-completed-hover: color-mix(
-    in oklab,
-    var(--color-neutral-200) 30%,
-    transparent
-  );
+  --event-button-bg-staff: color-mix(in oklab,
+      var(--color-cyan-700) 25%,
+      transparent);
+  --event-button-bg-staff-hover: color-mix(in oklab,
+      var(--color-cyan-700) 30%,
+      transparent);
+  --event-button-bg-admin: color-mix(in oklab,
+      var(--color-cyan-700) 25%,
+      transparent);
+  --event-button-bg-admin-hover: color-mix(in oklab,
+      var(--color-cyan-700) 30%,
+      transparent);
+  --event-button-bg-not-going: color-mix(in oklab,
+      var(--color-neutral-200) 25%,
+      transparent);
+  --event-button-bg-not-going-hover: color-mix(in oklab,
+      var(--color-neutral-200) 30%,
+      transparent);
+  --event-button-bg-completed: color-mix(in oklab,
+      var(--color-neutral-200) 25%,
+      transparent);
+  --event-button-bg-completed-hover: color-mix(in oklab,
+      var(--color-neutral-200) 30%,
+      transparent);
 
   --event-button-text-not-applied: var(--color-neutral-50);
   --event-button-text-under-review: var(--color-cyan-500);
@@ -316,56 +268,32 @@
   --color-badge-text-completed: var(--badge-text-completed);
 
   --color-event-button-bg-not-applied: var(--event-button-bg-not-applied);
-  --color-event-button-bg-not-applied-hover: var(
-    --event-button-bg-not-applied-hover
-  );
+  --color-event-button-bg-not-applied-hover: var(--event-button-bg-not-applied-hover);
   --color-event-button-bg-under-review: var(--event-button-bg-under-review);
-  --color-event-button-bg-under-review-hover: var(
-    --event-button-bg-under-review-hover
-  );
-  --color-event-button-bg-accepted-attending: var(
-    --event-button-bg-accepted-attending
-  );
-  --color-event-button-bg-accepted-attending-hover: var(
-    --event-button-bg-accepted-attending-hover
-  );
-  --color-event-button-bg-accepted-not-going: var(
-    --event-button-bg-accepted-not-going
-  );
-  --color-event-button-bg-accepted-not-going-hover: var(
-    --event-button-bg-accepted-not-going-hover
-  );
+  --color-event-button-bg-under-review-hover: var(--event-button-bg-under-review-hover);
+  --color-event-button-bg-accepted-attending: var(--event-button-bg-accepted-attending);
+  --color-event-button-bg-accepted-attending-hover: var(--event-button-bg-accepted-attending-hover);
+  --color-event-button-bg-accepted-not-going: var(--event-button-bg-accepted-not-going);
+  --color-event-button-bg-accepted-not-going-hover: var(--event-button-bg-accepted-not-going-hover);
   --color-event-button-bg-rejected: var(--event-button-bg-rejected);
   --color-event-button-bg-rejected-hover: var(--event-button-bg-rejected-hover);
   --color-event-button-bg-attending: var(--event-button-bg-attending);
-  --color-event-button-bg-attending-hover: var(
-    --event-button-bg-attending-hover
-  );
+  --color-event-button-bg-attending-hover: var(--event-button-bg-attending-hover);
   --color-event-button-bg-waitlisted: var(--event-button-bg-waitlisted);
-  --color-event-button-bg-waitlisted-hover: var(
-    --event-button-bg-waitlisted-hover
-  );
+  --color-event-button-bg-waitlisted-hover: var(--event-button-bg-waitlisted-hover);
   --color-event-button-bg-staff: var(--event-button-bg-staff);
   --color-event-button-bg-staff-hover: var(--event-button-bg-staff-hover);
   --color-event-button-bg-admin: var(--event-button-bg-admin);
   --color-event-button-bg-admin-hover: var(--event-button-bg-admin-hover);
   --color-event-button-bg-not-going: var(--event-button-bg-not-going);
-  --color-event-button-bg-not-going-hover: var(
-    --event-button-bg-not-going-hover
-  );
+  --color-event-button-bg-not-going-hover: var(--event-button-bg-not-going-hover);
   --color-event-button-bg-completed: var(--event-button-bg-completed);
-  --color-event-button-bg-completed-hover: var(
-    --event-button-bg-completed-hover
-  );
+  --color-event-button-bg-completed-hover: var(--event-button-bg-completed-hover);
 
   --color-event-button-text-not-applied: var(--event-button-text-not-applied);
   --color-event-button-text-under-review: var(--event-button-text-under-review);
-  --color-event-button-text-accepted-attending: var(
-    --event-button-text-accepted-attending
-  );
-  --color-event-button-text-accepted-not-going: var(
-    --event-button-text-accepted-not-going
-  );
+  --color-event-button-text-accepted-attending: var(--event-button-text-accepted-attending);
+  --color-event-button-text-accepted-not-going: var(--event-button-text-accepted-not-going);
   --color-event-button-text-rejected: var(--event-button-text-rejected);
   --color-event-button-text-attending: var(--event-button-text-attending);
   --color-event-button-text-waitlisted: var(--event-button-text-waitlisted);
