--- a/apps/web/src/theme.css
+++ b/apps/web/src/theme.css
@@ -16,6 +16,7 @@
   --button-outline-hover: oklch(0.5465 0.2455 262.87 / 25%);
   --button-outline-disabled: oklch(0.8071 0.10065 250.4462 / 25%);
 
+  /* BADGES */
   --badge-bg-default: var(--color-neutral-200);
   --badge-bg-rejected: var(--color-red-200);
   --badge-bg-attending: var(--color-blue-200);
@@ -39,6 +40,47 @@
   --badge-text-admin: var(--color-fuchsia-600);
   --badge-text-notGoing: var(--color-red-600);
   --badge-text-completed: var(--color-indigo-600);
+
+  /* EVENT CARD BUTTONS */
+  --eventBtn-bg-notApplied: var(--color-cyan-700);
+  --eventBtn-bg-underReview: color-mix(
+    in oklab,
+    var(--color-cyan-700) 25%,
+    transparent
+  );
+  --eventBtn-bg-accepted-attending: var(--color-green-600);
+  --eventBtn-bg-accepted-notGoing: var(--color-neutral-200);
+  --eventBtn-bg-rejected: var(--color-neutral-200);
+  --eventBtn-bg-attending: color-mix(
+    in oklab,
+    var(--color-cyan-700) 25%,
+    transparent
+  );
+  --eventBtn-bg-waitlisted: var(--color-violet-200);
+  --eventBtn-bg-staff: color-mix(
+    in oklab,
+    var(--color-cyan-700) 25%,
+    transparent
+  );
+  --eventBtn-bg-admin: color-mix(
+    in oklab,
+    var(--color-cyan-700) 25%,
+    transparent
+  );
+  --eventBtn-bg-notGoing: var(--color-neutral-200);
+  --eventBtn-bg-completed: var(--color-neutral-200);
+
+  --eventBtn-text-notApplied: var(--color-neutral-50);
+  --eventBtn-text-underReview: var(--color-cyan-900);
+  --eventBtn-text-accepted-attending: var(--color-neutral-50);
+  --eventBtn-text-accepted-notGoing: var(--color-zinc-900);
+  --eventBtn-text-rejected: var(--color-zinc-900);
+  --eventBtn-text-attending: var(--color-cyan-900);
+  --eventBtn-text-waitlisted: var(--color-violet-600);
+  --eventBtn-text-staff: var(--color-cyan-900);
+  --eventBtn-text-admin: var(--color-cyan-900);
+  --eventBtn-text-notGoing: var(--color-zinc-900);
+  --eventBtn-text-completed: var(--color-zinc-900);
 }
 
 .dark {
@@ -59,6 +101,7 @@
   --button-outline-hover: oklch(0.5465 0.2455 262.87 / 25%);
   --button-outline-disabled: oklch(0.8071 0.10065 250.4462 / 25%);
 
+  /* BADGES */
   --badge-bg-default: var(--color-neutral-200);
   --badge-bg-rejected: oklch(0.3378 0.0595 20.68);
   --badge-bg-attending: oklch(0.3078 0.0681 265.53);
@@ -82,6 +125,63 @@
   --badge-text-admin: var(--color-fuchsia-400);
   --badge-text-notGoing: var(--color-red-400);
   --badge-text-completed: var(--color-slate-300);
+
+  /* EVENT CARD BUTTONS */
+  --eventBtn-bg-notApplied: var(--color-cyan-800);
+  --eventBtn-bg-underReview: color-mix(
+    in oklab,
+    var(--color-cyan-700) 25%,
+    transparent
+  );
+  --eventBtn-bg-accepted-attending: var(--color-green-700);
+  --eventBtn-bg-accepted-notGoing: color-mix(
+    in oklab,
+    var(--color-neutral-200) 25%,
+    transparent
+  );
+  --eventBtn-bg-rejected: color-mix(
+    in oklab,
+    var(--color-neutral-200) 25%,
+    transparent
+  );
+  --eventBtn-bg-attending: color-mix(
+    in oklab,
+    var(--color-cyan-700) 25%,
+    transparent
+  );
+  --eventBtn-bg-waitlisted: #453a6b;
+  --eventBtn-bg-staff: color-mix(
+    in oklab,
+    var(--color-cyan-700) 25%,
+    transparent
+  );
+  --eventBtn-bg-admin: color-mix(
+    in oklab,
+    var(--color-cyan-700) 25%,
+    transparent
+  );
+  --eventBtn-bg-notGoing: color-mix(
+    in oklab,
+    var(--color-neutral-200) 25%,
+    transparent
+  );
+  --eventBtn-bg-completed: color-mix(
+    in oklab,
+    var(--color-neutral-200) 25%,
+    transparent
+  );
+
+  --eventBtn-text-notApplied: var(--color-neutral-50);
+  --eventBtn-text-underReview: var(--color-cyan-500);
+  --eventBtn-text-accepted-attending: var(--color-neutral-50);
+  --eventBtn-text-accepted-notGoing: var(--color-neutral-50);
+  --eventBtn-text-rejected: var(--color-neutral-50);
+  --eventBtn-text-attending: var(--color-cyan-500);
+  --eventBtn-text-waitlisted: var(--color-neutral-50);
+  --eventBtn-text-staff: var(--color-cyan-500);
+  --eventBtn-text-admin: var(--color-cyan-500);
+  --eventBtn-text-notGoing: var(--color-neutral-50);
+  --eventBtn-text-completed: var(--color-neutral-50);
 }
 
 @theme inline {
@@ -123,6 +223,34 @@
   --color-badge-text-admin: var(--badge-text-admin);
   --color-badge-text-notGoing: var(--badge-text-notGoing);
   --color-badge-text-completed: var(--badge-text-completed);
+
+  --color-eventBtn-bg-notApplied: var(--eventBtn-bg-notApplied);
+  --color-eventBtn-bg-underReview: var(--eventBtn-bg-underReview);
+  --color-eventBtn-bg-accepted-attending: var(--eventBtn-bg-accepted-attending);
+  --color-eventBtn-bg-accepted-notGoing: var(--eventBtn-bg-accepted-notGoing);
+  --color-eventBtn-bg-rejected: var(--eventBtn-bg-rejected);
+  --color-eventBtn-bg-attending: var(--eventBtn-bg-attending);
+  --color-eventBtn-bg-waitlisted: var(--eventBtn-bg-waitlisted);
+  --color-eventBtn-bg-staff: var(--eventBtn-bg-staff);
+  --color-eventBtn-bg-admin: var(--eventBtn-bg-admin);
+  --color-eventBtn-bg-notGoing: var(--eventBtn-bg-notGoing);
+  --color-eventBtn-bg-completed: var(--eventBtn-bg-completed);
+
+  --color-eventBtn-text-notApplied: var(--eventBtn-text-notApplied);
+  --color-eventBtn-text-underReview: var(--eventBtn-text-underReview);
+  --color-eventBtn-text-accepted-attending: var(
+    --eventBtn-text-accepted-attending
+  );
+  --color-eventBtn-text-accepted-notGoing: var(
+    --eventBtn-text-accepted-notGoing
+  );
+  --color-eventBtn-text-rejected: var(--eventBtn-text-rejected);
+  --color-eventBtn-text-attending: var(--eventBtn-text-attending);
+  --color-eventBtn-text-waitlisted: var(--eventBtn-text-waitlisted);
+  --color-eventBtn-text-staff: var(--eventBtn-text-staff);
+  --color-eventBtn-text-admin: var(--eventBtn-text-admin);
+  --color-eventBtn-text-notGoing: var(--eventBtn-text-notGoing);
+  --color-eventBtn-text-completed: var(--eventBtn-text-completed);
 
   --font-figtree: "Figtree", sans-serif;
 }
