--- a/apps/web/src/theme.css
+++ b/apps/web/src/theme.css
@@ -8,6 +8,16 @@
   --text-main: var(--color-zinc-900);
   --text-secondary: var(--color-zinc-600);
 
+  /* NAVBAR */
+  --navlink-bg-inactive: transparent;
+  --navlink-bg-active: var(--color-neutral-300);
+  --navlink-nested-bg-inactive: transparent;
+  --navlink-nested-bg-active: var(--color-neutral-200);
+
+  /* NAVBAR TEXT */
+  --navlink-text: var(--text-main);
+  --navlink-secondary-text: var(--text-secondary);
+
   /* BUTTONS */
   --button-primary: var(--color-blue-500);
   --button-primary-hover: var(--color-blue-700);
@@ -119,6 +129,16 @@
   /* TEXT */
   --text-main: var(--color-zinc-100);
   --text-secondary: var(--color-zinc-400);
+
+  /* NAVBAR */
+  --navlink-bg-inactive: transparent;
+  --navlink-bg-active: var(--surface);
+  --navlink-nested-bg-inactive: transparent;
+  --navlink-nested-bg-active: oklch(0.3715 0 0);
+
+  /* NAVBAR TEXT */
+  --navlink-text: var(--text-main);
+  --navlink-secondary-text: var(--text-secondary);
 
   /* BUTTONS */
   --button-primary: var(--color-blue-500);
@@ -262,6 +282,13 @@
 
   --color-text-main: var(--text-main);
   --color-text-secondary: var(--text-secondary);
+
+  --color-navlink-bg-inactive: var(--navlink-bg-inactive);
+  --color-navlink-bg-active: var(--navlink-bg-active);
+  --color-navlink-nested-bg-inactive: var(--navlink-nested-bg-inactive);
+  --color-navlink-nested-bg-active: var(--navlink-nested-bg-active);
+  --color-navlink-text: var(--navlink-text);
+  --color-navlink-secondary-text: var(--navlink-secondary-text);
 
   --color-button-primary: var(--button-primary);
   --color-button-primary-hover: var(--button-primary-hover);
